import { render, stopServer, html } from '../../../testing/testing-helpers';

const timeout = 90000;

describe('logo', () => {
  let page;

  beforeEach(async () => {
    await page.evaluate(() => {
      document.body.innerHTML = '';
    });
  }, timeout);

  beforeAll(async () => {
    page = await global.__BROWSER__.newPage();
    await page.goto('http://127.0.0.1:4444/', {
      timeout: 0,
    });
  }, timeout);

  afterAll(async function() {
    await stopServer();
    await page.close();
  });

  test('Basic usage', async () => {
    const results = await render('@bolt-components-logo/logo.twig', {
      src: '/fixtures/logo-paypal.svg',
      lazyload: false,
    });
    expect(results.ok).toBe(true);
    expect(results.html).toMatchSnapshot();
  });

  test('Logo with invert set to "true" renders properly', async () => {
    const results = await render('@bolt-components-logo/logo.twig', {
      src: '/fixtures/logo-paypal.svg',
      lazyload: false,
      invert: true,
    });
    expect(results.ok).toBe(true);
    expect(results.html).toMatchSnapshot();
  });

  test('Default <bolt-logo> renders', async function() {
    const renderedLogoHTML = await page.evaluate(() => {
      const logo = document.createElement('bolt-logo');

      // TODO: Use the actual logo web component once converted
      logo.innerHTML = `<img class="e-bolt-image" src="/fixtures/logo-paypal.svg" alt="Paypal Logo">`;

      document.body.appendChild(logo);

      return logo.outerHTML;
    });

    const renderedHTML = await html(renderedLogoHTML);
    await page.waitFor(500);

    expect(renderedHTML).toMatchSnapshot();
  });

  test('Inverted <bolt-logo> renders as inverted', async function() {
    const renderedLogoHTML = await page.evaluate(() => {
      const logo = document.createElement('bolt-logo');
      const wrapper = document.createElement('div');

      // TODO: Use the actual logo web component once converted
      logo.innerHTML = `<img class="e-bolt-image" src="/fixtures/logo-paypal.svg" alt="Paypal Logo">`;
      logo.classList.add('c-bolt-logo--invert');

      wrapper.classList.add('t-bolt-dark');
      wrapper.appendChild(logo);

      document.body.appendChild(wrapper);

      return logo.outerHTML;
    });

    const renderedHTML = await html(renderedLogoHTML);
    await page.waitFor(500);

    expect(renderedHTML).toMatchSnapshot();
  });
});
