// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logo Basic usage 1`] = `
<bolt-logo>
  <img src="/fixtures/logo-paypal.svg"
       class="u-bolt-block e-bolt-image"
  >
</bolt-logo>
`;

exports[`logo Default <bolt-logo> renders 1`] = `
<bolt-logo
  style=""
>
  <img
    alt="Paypal Logo"
    class="e-bolt-image"
    src="/fixtures/logo-paypal.svg"
    style=""
  />
</bolt-logo>
`;

exports[`logo Inverted <bolt-logo> renders as inverted 1`] = `
<bolt-logo
  class="c-bolt-logo--invert"
  style=""
>
  <img
    alt="Paypal Logo"
    class="e-bolt-image"
    src="/fixtures/logo-paypal.svg"
    style=""
  />
</bolt-logo>
`;

exports[`logo Logo with invert set to "true" renders properly 1`] = `
<bolt-logo class="c-bolt-logo--invert">
  <img src="/fixtures/logo-paypal.svg"
       class="u-bolt-block e-bolt-image"
  >
</bolt-logo>
`;
